tests/errors/parser-dangling.spcasmtest
org 0
adc a,x
end 50
